theme.scss
/* ... */
.window {
  font-family: var(--primary-font);
  background: var(--chat-background);
}
body {
  background-color: $dark-background;
}



/*
  Button styles
*/
.btn {
  border: none;
  background: $pale-blue;
  color: var(--sidebar-background);
  border-radius: 8px;
  text-transform: none;
  letter-spacing: normal;
  height: 45px;

  &:focus, &:hover, &:active, &:disabled {
    background: var(--off-white);
    border: none;
    outline: none;
    box-shadow: none;
    color: var(--sidebar-background);
  }
}


/*
  Link styles
*/
a {
  color: var(--link-color);
  text-decoration: underline;

  &:hover {
    color: #88c8ff;
  }

  &:visited {
    color: #6b90c7;

    &:hover {
      color: #88c8ff;
    }
  }

  &:focus {
    color: var(--link-color);
    background-color: rgba(white, 0.2);
    outline: none;
  }
}


/*
  Mentions popup
*/
.mentions-popup { 
  background-color: var(--sidebar-background);
  color: var(--off-white);
  font-family: var(--primary-font);
  padding: 0;

  & > p {
    padding: 15px;
  }

  .mentions-popup-title {
    font-weight: 700;
    padding: 60px 15px 20px 15px;
    background: var(--off-black);
  }

  .btn { height: auto; }

  // lol
  .msg {
    padding: 15px;
    padding-bottom: 20px;
    border-bottom: 1px solid var(--off-black);
    margin-bottom: 10px;

    .mentions-info {
      font-style: italic;
      color: rgba(var(--off-white), 0.8);
      margin-bottom: 10px;
    }

    .content {
      background: transparent;
      font-weight: bold;
      padding: 0;
    }

    .msg-hide {
      color: $pale-blue;


      &:hover {
        color: white;
      }
    }
  }
}


/*
  Context menu
*/
#context-menu, .textcomplete-menu {
  background: rgba(var(--off-black), 0.75);
  border: 1px solid black;
  backdrop-filter: blur(20px);
  -webkit-backdrop-filter: blur(20px);

  .context-menu-item, .textcomplete-item {
    color: var(--off-white);

    // why is this an anchor
    a {
      color: var(--off-white);
      text-decoration: none;
    }

    &.active {
      background: rgba(white, 0.1);
    }
  }

  .context-menu-divider {
    background: black;
  }
}


/*
  Upper-left logo
*/
#sidebar {
  min-width: 220px;
  width: 11vw;

  .logo, .logo-inverted {
    display: none;
  }

  .logo-container {
    height: 45px;
    margin-bottom: 30px;

    &:hover {
      &::after {
        font-weight: bold;
        color: transparent;
        // This could definitely be improved. SVG?
        background: linear-gradient(35deg,
          white, white, white, white, white,
          #98A9D7, #8ED2CD, #C2ED98, #F1F487, #FED776, #F59B7C, #FED776, #F1F487, #C2ED98, #8ED2CD, #98A9D7,
          white, white, white, white
        );
        background-clip: text;
        -webkit-background-clip: text;
        background-size: 500px 45px;
        animation: $rainbow-logo-animation;
      }
    }
    
    &::after {
      content: 'the lounge';
      font-family: var(--logo-font);
      font-size: 18px;
      display: inline-block;
      color: white;
      margin: auto auto 0 auto;
    }

    &::before {
      content: ' ';
      display: block;
      background: $svg-logo-primary;
      width: 25px;
      height: 25px;
      background-repeat: no-repeat;
      margin: auto;
      margin-top: 20px;
    }
  }
}


/*
  Network list
*/
#sidebar {
  background: #222428;
  font-family: var(--primary-font);

  .scrollable-area {
    padding: 0px 30px;
    overflow-x: visible;
    overflow-y: scroll;
  }

  .jump-to-input {
    margin: 0 0 15px 0;

    .input {
      background: var(--sidebar-background);
      color: var(--off-white);
      border: 1px solid var(--chat-background);
      border-radius: 10px;
      padding: 0 15px;

      &::placeholder {
        color: $pale-blue;
      }

      &:focus {
        box-shadow: 0 0 0 3px rgba($link-blue, 0.5)
      }
    }

    &::before {
      color: $muted-blue;
    }
  }

  .lobby-wrap {
    order: 1;
    flex-grow: 0;
  }

  .collapse-network {
    opacity: 0.4;
    order: 2;
    margin-left: auto;

    &:hover { opacity: 1 }
  }

  .add-channel-tooltip,
  .channel-list-item .badge,
  .channel-list-item,
  .close-tooltip {
    order: 3;
  }

  .network .collapse-network-icon {
    background: white;
    border-radius: 999px;
    font-size: 0.8em;
    display: block;
    width: 13px;
    height: 13px;
    position: relative;

    &:before {
      color: var(--chat-background);
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      line-height: 13px;
    
    }
  }

  .add-channel-tooltip {
    line-height: normal;
  }

  .badge {
    line-height: 1;
  }

  .channel-list-item {
    padding: 6px 0 6px 0px;
  
    &:hover {
      background: none;
    }
  
    &.active {
      background: none;
    }
  
    &[data-type=lobby] {
      font-size: 1.3em;
      color: var(--off-white);
      font-weight: 700;
  
      &:hover {
        color: white;
      }
    }
  
    .name {
      -webkit-mask-image: none;
      mask-image: none;
    }
  }
}


/*
  Drag & drop styles
*/
.ui-sortable-ghost::after,
.ui-sortable-dragging-touch-cue:not(.ui-sortable-dragging)::after {
  background: $darkest-background; 
}

/*
  Sidebar footer
*/
#footer {
  margin-bottom: 10px;

  button {
    color: $pale-blue;
    margin: 0 3px;
    width: 60px;

    &:hover {
      background: rgba($pale-blue, 0.1);
    }

    &.active {
      background: rgba(var(--link-color), 0.1);
    }

    &.active:hover {
      background: rgba(var(--link-color), 0.1);
    }
  }
}
/* ... */

